add event listeners

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <h1>Previous polls</h1>
             
-            <div id="previous-polls-container">
+            <div id="previous-polls-div">
             </div>
         
         </section>
